objects/Salesforce_Request__c.object
<CustomObject>
    <description>Object for containing a request for a change in Salesforce</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Salesforce_Requests_Assignee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Needed__c</fullName>
        <label>Date Needed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Acclaim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certiport G2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEDTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Effort__c</fullName>
        <label>Effort</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Sprint</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <label>Urgency</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Salesforce Request</label>
    <listViews>
        <fullName>Current_Sprint</fullName>
        <columns>NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Urgency__c</columns>
        <columns>Effort__c</columns>
        <columns>Rank__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>8/31/15</value>
        </filters>
        <label>Current Sprint</label>
        <sharedTo>
            <role>Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Requests</fullName>
        <columns>NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Urgency__c</columns>
        <columns>Effort__c</columns>
        <columns>Rank__c</columns>
        <columns>Sprint__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>Open Requests</label>
        <sharedTo>
            <role>Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Requests_Assigned_to_David</fullName>
        <columns>NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Urgency__c</columns>
        <columns>Effort__c</columns>
        <columns>Rank__c</columns>
        <columns>Sprint__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>contains</operation>
            <value>Gunn</value>
        </filters>
        <label>Open Requests Assigned to David</label>
        <sharedTo>
            <role>Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Requests_Assigned_to_Geri</fullName>
        <columns>NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Urgency__c</columns>
        <columns>Effort__c</columns>
        <columns>Rank__c</columns>
        <columns>Sprint__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>contains</operation>
            <value>Caban</value>
        </filters>
        <label>Open Requests Assigned to Geri</label>
        <sharedTo>
            <role>Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Requests_Unassigned</fullName>
        <columns>NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Urgency__c</columns>
        <columns>Effort__c</columns>
        <columns>Rank__c</columns>
        <columns>Sprint__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
        </filters>
        <label>Open Requests - Unassigned</label>
        <sharedTo>
            <role>Administrator</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SFR-{00000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Department_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ispickval(Department__c,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Department__c</errorDisplayField>
        <errorMessage>Department is required.  Please specify a Department.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Urgency_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ispickval(Urgency__c,&quot;&quot;)</errorConditionFormula>
        <errorMessage>Urgency is required.  Please specify the urgency.</errorMessage>
    </validationRules>
</CustomObject>